testsuite/tests/checks/address_specifications_for_initialized_objects/test.out
address_specifications_for_initialized_objects.ads:7:5: error: address_specifications_for_initialized_objects - rule violation
7 |     for Var1'Address use Var0'Address;                 --  FLAG
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

address_specifications_for_initialized_objects.ads:9:31: error: address_specifications_for_initialized_objects - rule violation
9 |     Var2 : Integer := 30 with Address => Var0'Address; --  FLAG
  |                               ^^^^^^^^^^^^^^^^^^^^^^^ 

